# ComfyRaw

./: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  README.md  comfyui_version.py  docker-compose.yml  execution.py  folder_paths.py  main.py  node_helpers.py  nodes.py  patch_frontend.py  pyproject.toml  requirements.txt  run_tests.py  server.py  start.bat  start.sh
app/assets/: helpers.py
comfy/: memory_management.py  model_management.py  utils.py
comfy/comfy_types/: __init__.py
comfy_api/input/: __init__.py
comfy_api/input_impl/: __init__.py
comfy_api/latest/: __init__.py  _io.py  _ui.py
comfy_api/latest/_input/: __init__.py  basic_types.py
comfy_api/latest/_input_impl/: video_types.py
comfy_api/latest/_util/: __init__.py
comfy_cv/: __init__.py  image.py  memory.py  types.py  video.py
comfy_execution/: caching.py  validation.py
comfy_extras/: nodes_opencv.py  nodes_raw.py
comfy_extras/raw_web/: raw_image.js
docs/: PRD.md  TASKS.md  TRD.md
tests-unit/: conftest.py
tests-unit/comfy_cv/: conftest.py  test_image.py  test_memory.py  test_types.py  test_video.py
tests-unit/nodes/: conftest.py  test_basic_nodes.py  test_opencv_nodes.py
web/assets/: index--yK73oka.js
web/scripts/: defaultGraph.js
